syntax = "proto3";

package com.example.complex;

message ComplexMessage {
    SampleMessage one_sample = 2;
    repeated SampleMessage multiple_samples = 3;
}

message SampleMessage {
    int32 id = 1;
    string name = 2;
    bool is_complex = 3;
}