syntax = "proto3";

package com.example.enumerations;

message EnumMessage {
    int32 id = 1;
    DayofWeek day = 2;
}

enum DayofWeek {
    DAY_OF_WEEK_UNSPECIFIED = 0;
    MONDAY = 1;
    TUESDAY = 2;
    WEDNESDAY = 3;
    THURSDAY = 4;
    FRIDAY = 5;
    SATURDAY = 6;
    SUNDAY = 7;
}